Fixed flicker of icon TrapeziusShape upon reveal

--- a/styles/TrapeziusShape.css
+++ b/styles/TrapeziusShape.css
@@ -102,8 +102,6 @@
   width: 80px;
   height: 100px;
   z-index: 1;
-  /* fill: black; */
-  /* fill: transparent; */
   height: auto;
   overflow: visible !important;
   /* border: 2px solid black; */
@@ -114,18 +112,13 @@
 }
 
 .trapPath {
-  /* fill: url(#trapeziusShapeRadialGradient); */
-  /* fill: url(#trapeziusShapeLinearGradient); */
-  /* fill: red; */
-  /* opacity: .2; */
   transition-duration: 0.5s;
   transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);
   transform-origin: center;
 }
 
 .trapPath:nth-of-type(3) {
-  border: 5px solid red;
-  /* transform: translateX(-100px) !important; */
+  transform: translateZ(1px);
   /* display: none; */
 }
 
@@ -158,10 +151,10 @@
   height: 100%;
   /* background: linear-gradient(white, white); */
   background-color: whitesmoke;
-  opacity: .1;
+  opacity: 0.1;
   border-radius: 1000px;
   z-index: 5;
-  transform: scaleX(.95) scaleY(1.3);
+  transform: scaleX(0.95) scaleY(1.3) translateZ(0px);
 }
 
 .gradientShape {
@@ -197,7 +190,7 @@
   --color-stop-2: rgb(18, 63, 155); */
 }
 
-#trapeziusShapeRadialGradient {
+/* #trapeziusShapeRadialGradient {
   --color-stop-1: blue;
   --color-stop-2: red;
-}
+} */
